<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/loginFragment">
    <fragment
        android:id="@+id/loginFragment"
        android:name="com.zoom.happiestplacesrestaurant.ui.login.LoginFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_login" />
    <fragment
        android:id="@+id/orderFragment"
        android:name="com.zoom.happiestplacesrestaurant.ui.order.OrderFragment"
        android:label="@string/order_fragment"
        tools:layout="@layout/order_fragment" />
    <fragment
        android:id="@+id/orderDisplayFragment"
        android:name="com.zoom.happiestplacesrestaurant.ui.order.display.OrderDisplayFragment"
        android:label="@string/orderDisplayFragment"
        tools:layout="@layout/order_display_fragment" />
    <fragment
        android:id="@+id/orderHistoryFragment"
        android:name="com.zoom.happiestplacesrestaurant.ui.order.orderhistory.OrderHistoryFragment"
        android:label="@string/orderHistoryFragment"
        tools:layout="@layout/order_history_fragment" />
    <fragment
        android:id="@+id/signOutFragment"
        android:name="com.zoom.happiestplacesrestaurant.ui.SignOutFragment"
        android:label="@string/app_name"
        tools:layout="@layout/sign_out_fragment" />
    <fragment
        android:id="@+id/issueReportFragment"
        android:name="com.zoom.happiestplacesrestaurant.ui.issue.IssueReportFragment"
        android:label="@string/issueFragment"
        tools:layout="@layout/issue_report_fragment" />
    <fragment
        android:id="@+id/verificationFragment"
        android:name="com.zoom.happiestplacesrestaurant.ui.login.VerificationFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_verification" />


</navigation>