<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/orderDisplayFragment"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/orderDisplayFragment" />
        <item
            android:id="@+id/orderHistoryFragment"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/orderHistoryFragment" />
        <item
            android:id="@+id/signoutButton"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/sign_out" />

    </group>
</menu>