<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.VerificationFragment">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:drawableTop="@drawable/ic_action_signout"
        android:drawablePadding="2dp"
        android:id="@+id/msg"
        android:layout_margin="@dimen/margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/primaryTextColor"
        android:text="@string/verMsgTitle"
        android:textSize="@dimen/font_medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/refresh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/refresh"
        android:textColor="@color/primaryTextColor"
        android:layout_margin="@dimen/margin"
        android:focusable="true"
        app:layout_constraintRight_toRightOf="parent"
        style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
        app:layout_constraintTop_toBottomOf="@id/msg"
        app:layout_constraintLeft_toRightOf="@id/resend"/>

    <Button
        android:id="@+id/resend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        android:text="@string/resend"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/refresh"
        app:layout_constraintTop_toBottomOf="@+id/msg" />

    <include
        android:id="@+id/view_loader"
        layout="@layout/view_loader" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/layoutGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="msg,refresh,resend"/>
</androidx.constraintlayout.widget.ConstraintLayout>