<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:layout_margin="@dimen/margin"
android:background="@android:color/white"
android:elevation="@dimen/card_view_elevation"
android:padding="@dimen/padding_small"
app:cardBackgroundColor="@android:color/white"
app:cardCornerRadius="@dimen/card_view_corner_radius"
app:cardElevation="@dimen/card_view_elevation"
tools:context=".ui.issue.IssueReportFragment">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/topic_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin"
        android:layout_marginTop="@dimen/margin_small"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:textSize="@dimen/font_medium"
        android:maxLines="2"
        android:textColor="@color/primaryTextColor"
        android:text="@string/topic_label"
        tools:text="@string/topic_label"
        />
    <Spinner
        android:id="@+id/spinner"
        style="@style/Widget.AppCompat.Spinner.Underlined"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:spinnerMode="dialog"
        android:popupBackground="@color/primaryColor"
        android:layout_marginHorizontal="@dimen/margin"
        android:prompt="@string/topic"
        android:dropDownSelector="@color/primaryColor"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/topic_label"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edittext_bkg"
        android:id="@+id/issue_text"
        android:hint="@string/describe"
        android:layout_marginTop="@dimen/margin"
        android:layout_marginHorizontal="@dimen/margin"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/spinner"
        android:textSize="@dimen/font_medium"
        android:lines="8"
        android:maxLines="10"
        android:ems="10"
        android:gravity="center"
        android:lineSpacingExtra="@dimen/margin_small"
        style="@style/CardView"
        app:layout_constraintRight_toRightOf="parent"
        android:inputType="textMultiLine" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/submitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/issue_text"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/submit"/>

    <androidx.constraintlayout.widget.Group
        android:id="@+id/layout_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="issue_text,spinner,submitButton,topic_label"/>

</androidx.constraintlayout.widget.ConstraintLayout>
    <include
        android:id="@+id/view_loader"
        layout="@layout/view_loader"/>
</com.google.android.material.card.MaterialCardView>